--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <li><a href="#">Местоположение</a></li>
             <li><a href="#">Номер телефона</a></li>
         </ul>
+
+        <div class="right-content">
+            <a href="#" class="nav-btn">Рецепты</a>
+            iv
+        </div>
     </header>
 
     <!-- js link -->
